--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,29 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.fasterxml.uuid</groupId>
-  <artifactId>jug</artifactId>
-  <packaging>bundle</packaging>
+  <artifactId>java-uuid-generator</artifactId>
   <name>Java UUID Generator</name>
-  <version>2.9.0</version>
+  <version>2.9.0-SNAPSHOT</version>
+  <packaging>bundle</packaging>
   <description>
-JUG is a pure java UUID generator, that can be used either as a component in a bigger application, or as a standalone command line tool.
+Java UUID Generator (JUG) is a Java library for generating
+Universally Unique IDentifiers, UUIDs (see http://en.wikipedia.org/wiki/UUID).
+It can be used either as a component in a bigger application, or as a standalone command line tool.
 JUG generates UUIDs according to the IETF UUID draft specification.
-JUG supports all 3 official UUID generation  methods.
+JUG supports all 3 official UUID generation methods.
 </description>
+  <scm>
+    <connection>scm:git:git://github.com/cowtowncoder/java-uuid-generator.git</connection>
+    <url>scm:git:git@github.com:cowtowncoder/java-uuid-generator.git</url>
+    <developerConnection>scm:git:git@github.com:cowtowncoder/java-uuid-generator.git</developerConnection>
+  </scm>
+  <developers>
+    <developer>
+      <id>cowtowncoder</id>
+      <name>Tatu Saloranta</name>
+      <email>tatu.saloranta@iki.fi</email>
+    </developer>
+  </developers>
 
   <prerequisites>
     <maven>2.0.9</maven>
@@ -23,11 +37,9 @@ JUG supports all 3 official UUID generation  methods.
   </properties>
 
  <!-- Contact information -->
-
-  <url>http://github.com/cowtowncoder/java-uuid-generator</url>
+  <url>http://wiki.fasterxml.com/JugHome</url>
   <issueManagement>
-    <url>
-http://github.com/cowtowncoder/java-uuid-generator/issues
+    <url>http://github.com/cowtowncoder/java-uuid-generator/issues
 </url>
   </issueManagement>
 
@@ -109,6 +121,27 @@ com.fasterxml.uuid
           </configuration>
        </plugin>
 
+        <!-- for maven release, need yet another plug-in -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.0</version>
+        </plugin>
+        <!-- And Sonatype also mandates GPG... oh brother -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <executions>
+           <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+           </execution>
+          </executions>
+        </plugin>
+
     </plugins>
   </build>
 
@@ -126,14 +159,17 @@ com.fasterxml.uuid
     <url>http://fasterxml.com</url>
   </organization>
 
-  <!-- 18-Mar-2010, tatu: Let's publish via Codehaus repo
+  <!-- 01-May-2010, tatu: Let's publish via Sonatype OS repo
     -->
   <repositories>
     <repository>
-      <id>codehaus</id>
-      <name>Codehaus</name>
+      <id>sonatype</id>
+      <name>Sonatype</name>
       <layout>default</layout>
+<!--
       <url>http://repository.codehaus.org</url>
+-->
+      <url>http://oss.sonatype.org/content/repositories/releases</url>
       <releases>
         <enabled>true</enabled>
         <updatePolicy>daily</updatePolicy>
@@ -159,20 +195,27 @@ com.fasterxml.uuid
            section... see if that works ok.
     -->
   <distributionManagement>
+    <snapshotRepository>
+      <id>sonatype-nexus-snapshots</id>
+      <name>Sonatype Nexus Snapshots</name>
+      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>sonatype-nexus-staging</id>
+      <name>Nexus Release Repository</name>
+      <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+
+<!--
     <repository>
       <uniqueVersion>false</uniqueVersion>
-      <id>codehaus-release</id>
-      <name>Codehaus Maven2 Repository</name>
-      <url>dav:https://dav.codehaus.org/repository/staxmate</url>
+      <id>sonatype-release</id>
+      <name>Sonatype Maven2 Repository</name>
+      <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
       <layout>default</layout>
     </repository>
-    <snapshotRepository>
-      <uniqueVersion>true</uniqueVersion>
-      <id>codehaus-snapshot</id>
-      <name>Codehaus Snapshots</name>
-      <url>dav:https://dav.codehaus.org/snapshots.repository/staxmate</url>
-      <layout>default</layout>
-    </snapshotRepository>
+-->
+
   </distributionManagement>
 
 </project>
