--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@ JUG supports all 3 official UUID generation methods.
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>[4.0.0,5.0.0)</version>
+      <version>4.8.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
