--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@ JUG supports all 3 official UUID generation methods.
         <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
+          <version>2.3.4</version>
           <extensions>true</extensions>
           <configuration>
             <instructions>
