Adding more plugin versions

--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,9 @@ JUG supports all 3 official UUID generation methods.
   <build>
     <plugins>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.3.2</version>
           <configuration>
             <source>1.6</source>
             <target>1.6</target>
@@ -86,6 +88,7 @@ JUG supports all 3 official UUID generation methods.
         <plugin><!-- plug-in to attach source bundle in repo -->
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
+          <version>2.1.2</version>
           <executions>
             <execution>
               <id>attach-sources</id>
@@ -138,7 +141,9 @@ org.apache.log4j
               <Private-Package>
 </Private-Package>
               <Export-Package>
-com.fasterxml.uuid, com.fasterxml.uuid.ext, com.fasterxml.uuid.impl
+com.fasterxml.uuid
+,com.fasterxml.uuid.ext
+,com.fasterxml.uuid.impl
 </Export-Package>
             </instructions>
           </configuration>
@@ -149,7 +154,7 @@ com.fasterxml.uuid, com.fasterxml.uuid.ext, com.fasterxml.uuid.impl
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.0</version>
+          <version>2.1</version>
           <configuration>
             <mavenExecutorId>forked-path</mavenExecutorId>
           </configuration>
