--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@ JUG supports all 3 official UUID generation methods.
   </prerequisites>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <log4j.version>1.2.13</log4j.version>
   </properties>
   <licenses>
     <license>
@@ -61,7 +62,7 @@ JUG supports all 3 official UUID generation methods.
     <dependency> <!-- log4j is optional, but needed for compilation -->
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.13</version>
+      <version>${log4j.version}</version>
       <scope>compile</scope>
     </dependency>
     <!-- and for testing, JUnit is needed -->
@@ -133,18 +134,20 @@ JUG supports all 3 official UUID generation methods.
               <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
               <Bundle-Description>${project.description}</Bundle-Description>
               <Bundle-Vendor>FasterXML.com</Bundle-Vendor>
-              <Import-Package>
-</Import-Package>
-              <DynamicImport-Package>
-org.apache.log4j
-</DynamicImport-Package>
-              <Private-Package>
-</Private-Package>
               <Export-Package>
-com.fasterxml.uuid
-,com.fasterxml.uuid.ext
-,com.fasterxml.uuid.impl
-</Export-Package>
+                com.fasterxml.uuid;version="${project.version}",
+                com.fasterxml.uuid.ext;version="${project.version}",
+                com.fasterxml.uuid.impl;version="${project.version}"
+              </Export-Package>
+              <Import-Package>
+                com.fasterxml.uuid;version="[${project.version},${project.version}]",
+                com.fasterxml.uuid.ext;version="[${project.version},${project.version}]",
+                com.fasterxml.uuid.impl;version="[${project.version},${project.version}]"
+              </Import-Package>
+              <Private-Package></Private-Package>
+              <DynamicImport-Package>
+                org.apache.log4j;version="[${log4j.version},1.3)"
+              </DynamicImport-Package>
             </instructions>
           </configuration>
        </plugin>
