--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>java-uuid-generator</artifactId>
   <packaging>bundle</packaging>
   <name>Java UUID Generator</name>
-  <version>3.1.2-SNAPSHOT</version>
+  <version>3.1.2</version>
   <description>
 Java UUID Generator (JUG) is a Java library for generating
 Universally Unique IDentifiers, UUIDs (see http://en.wikipedia.org/wiki/UUID).
@@ -144,7 +144,7 @@ JUG supports all 3 official UUID generation methods.
                 com.fasterxml.uuid.ext;version="[${project.version},${project.version}]",
                 com.fasterxml.uuid.impl;version="[${project.version},${project.version}]"
               </Import-Package>
-              <Private-Package></Private-Package>
+              <Private-Package />
               <DynamicImport-Package>
                 org.apache.log4j;version="[${log4j.version},1.3)"
               </DynamicImport-Package>
