--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@ JUG supports all 3 official UUID generation methods.
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>${log4j.version}</version>
-      <scope>compile</scope>
+      <scope>provided</scope>
     </dependency>
     <!-- and for testing, JUnit is needed -->
     <dependency>
@@ -80,7 +80,7 @@ JUG supports all 3 official UUID generation methods.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>3.1</version>
           <configuration>
             <source>1.6</source>
             <target>1.6</target>
@@ -104,7 +104,6 @@ JUG supports all 3 official UUID generation methods.
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
-         <version>2.6.1</version>
           <configuration>
               <encoding>UTF-8</encoding>
               <links>
@@ -126,7 +125,6 @@ JUG supports all 3 official UUID generation methods.
         <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
-          <version>2.3.4</version>
           <extensions>true</extensions>
           <configuration>
             <instructions>
@@ -157,7 +155,6 @@ JUG supports all 3 official UUID generation methods.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.1</version>
           <configuration>
             <mavenExecutorId>forked-path</mavenExecutorId>
           </configuration>
