--- a/pom.xml
+++ b/pom.xml
@@ -104,21 +104,16 @@ JUG supports all 3 official UUID generation methods.
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
-          <configuration>
-              <encoding>UTF-8</encoding>
-              <links>
-                  <link>http://java.sun.com/javase/6/docs/api/</link>
-              </links>
-          </configuration>
-          <executions>
-              <execution>
+         <version>${version.plugin.javadoc}</version>
+         <executions>
+             <execution>
                   <id>attach-javadocs</id>
                   <phase>verify</phase>
                   <goals>
                       <goal>jar</goal>
                   </goals>
-              </execution>
-          </executions>
+             </execution>
+         </executions>
        </plugin>
 
        <!-- Plus, let's make jars OSGi bundles as well  -->
