--- a/pom.xml
+++ b/pom.xml
@@ -155,10 +155,33 @@ JUG supports all 3 official UUID generation methods.
             <mavenExecutorId>forked-path</mavenExecutorId>
           </configuration>
         </plugin>
+     <!--  22-Mar-2019, tatu: Add rudimentary JDK9+ module info. To build with JDK 8
+             will have to use `moduleInfoFile` which is not optimal but anything else
+             requires JDK 9+.
+        -->
+      <plugin>
+        <groupId>org.moditect</groupId>
+        <artifactId>moditect-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>add-module-infos</id>
+            <phase>package</phase>
+            <goals>
+              <goal>add-module-info</goal>
+            </goals>
+            <configuration>
+              <overwriteExistingFiles>true</overwriteExistingFiles>
+              <module>
+                <moduleInfoFile>src/moditect/module-info.java</moduleInfoFile>
+              </module>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
-    <profiles>
+  <profiles>
         <profile>
             <id>release-sign-artifacts</id>
             <activation>
@@ -186,8 +209,8 @@ JUG supports all 3 official UUID generation methods.
                 </plugins>
             </build>
         </profile>
-    </profiles>
+  </profiles>
 
-    <!-- NOTE: repositories from parent POM -->
+  <!-- NOTE: repositories from parent POM -->
 
 </project>
