--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@ JUG supports all 3 official UUID generation methods.
   </prerequisites>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <slf4j.version>1.7.28</slf4j.version>
+    <slf4j.version>1.7.29</slf4j.version>
   </properties>
   <licenses>
     <license>
@@ -140,12 +140,10 @@ JUG supports all 3 official UUID generation methods.
               <Import-Package>
                 com.fasterxml.uuid;version="[${project.version},${project.version}]",
                 com.fasterxml.uuid.ext;version="[${project.version},${project.version}]",
-                com.fasterxml.uuid.impl;version="[${project.version},${project.version}]"
+                com.fasterxml.uuid.impl;version="[${project.version},${project.version}]",
+                org.slf4j;version="[${slf4j.version},)"
               </Import-Package>
               <Private-Package />
-              <DynamicImport-Package>
-                org.apache.log4j;version="[${log4j.version},1.3)"
-              </DynamicImport-Package>
             </instructions>
           </configuration>
        </plugin>
