Fix #65: add Reproducible Build behavior

--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
   <parent>
       <groupId>com.fasterxml</groupId>
       <artifactId>oss-parent</artifactId>
-      <version>45</version>
+      <version>49</version>
   </parent>
   <groupId>com.fasterxml.uuid</groupId>
   <artifactId>java-uuid-generator</artifactId>
-  <packaging>bundle</packaging>
+  <packaging>jar</packaging>
   <name>Java UUID Generator</name>
   <version>4.1.0-SNAPSHOT</version>
   <description>
@@ -41,6 +41,8 @@ JUG supports all 3 official UUID generation methods.
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.version>1.7.36</slf4j.version>
+
+    <project.build.outputTimestamp>2023-01-07T12:00:00Z</project.build.outputTimestamp>
   </properties>
   <licenses>
     <license>
