--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
       <groupId>com.fasterxml</groupId>
       <artifactId>oss-parent</artifactId>
-      <version>54</version>
+      <version>53</version>
   </parent>
   <groupId>com.fasterxml.uuid</groupId>
   <artifactId>java-uuid-generator</artifactId>
@@ -15,7 +15,7 @@
     -->
   <packaging>bundle</packaging>
   <name>Java UUID Generator</name>
-  <version>4.3.0-SNAPSHOT</version>
+  <version>4.3.0</version>
   <description>
 Java UUID Generator (JUG) is a Java library for generating
 Universally Unique IDentifiers, UUIDs (see http://en.wikipedia.org/wiki/UUID).
@@ -28,7 +28,7 @@ JUG supports all 3 official UUID generation methods.
     <connection>scm:git:git://github.com/cowtowncoder/java-uuid-generator.git</connection>
     <url>https://github.com/cowtowncoder/java-uuid-generator</url>
     <developerConnection>scm:git:git@github.com:cowtowncoder/java-uuid-generator.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>java-uuid-generator-4.3.0</tag>
   </scm>
   <developers>
     <developer>
@@ -45,7 +45,7 @@ JUG supports all 3 official UUID generation methods.
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.version>1.7.36</slf4j.version>
 
-    <project.build.outputTimestamp>2023-05-14T23:38:15Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2023-09-13T00:40:50Z</project.build.outputTimestamp>
   </properties>
   <licenses>
     <license>
