--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     -->
   <packaging>bundle</packaging>
   <name>Java UUID Generator</name>
-  <version>4.3.0</version>
+  <version>4.3.1-SNAPSHOT</version>
   <description>
 Java UUID Generator (JUG) is a Java library for generating
 Universally Unique IDentifiers, UUIDs (see http://en.wikipedia.org/wiki/UUID).
@@ -45,7 +45,7 @@ JUG supports all 3 official UUID generation methods.
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.version>1.7.36</slf4j.version>
 
-    <project.build.outputTimestamp>2023-09-13T00:45:30Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2023-09-13T00:45:46Z</project.build.outputTimestamp>
   </properties>
   <licenses>
     <license>
