--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
       <groupId>com.fasterxml</groupId>
       <artifactId>oss-parent</artifactId>
-      <version>54</version>
+      <version>55</version>
   </parent>
   <groupId>com.fasterxml.uuid</groupId>
   <artifactId>java-uuid-generator</artifactId>
@@ -15,7 +15,7 @@
     -->
   <packaging>bundle</packaging>
   <name>Java UUID Generator</name>
-  <version>4.3.1-SNAPSHOT</version>
+  <version>5.0.0-SNAPSHOT</version>
   <description>
 Java UUID Generator (JUG) is a Java library for generating
 Universally Unique IDentifiers, UUIDs (see http://en.wikipedia.org/wiki/UUID).
@@ -28,7 +28,7 @@ JUG supports all 3 official UUID generation methods.
     <connection>scm:git:git://github.com/cowtowncoder/java-uuid-generator.git</connection>
     <url>https://github.com/cowtowncoder/java-uuid-generator</url>
     <developerConnection>scm:git:git@github.com:cowtowncoder/java-uuid-generator.git</developerConnection>
-    <tag>java-uuid-generator-4.3.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <developers>
     <developer>
@@ -91,8 +91,8 @@ JUG supports all 3 official UUID generation methods.
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${version.plugin.compiler}</version>
           <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
+            <source>1.8</source>
+            <target>1.8</target>
           </configuration>
         </plugin>
         <plugin><!-- plug-in to attach source bundle in repo -->
